--- a/word2vec/doc/Learning Notes on word2vec.ipynb
+++ b/word2vec/doc/Learning Notes on word2vec.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## [word2vec词向量训练及中文文本相似度计算](http://blog.csdn.net/eastmount/article/details/50637476)\n",
     "1.词向量是多维实数向量，**向量中包含了自然语言中的语义和语法关系，词向量之间余弦距离的大小代表了词语之间关系的远近，词向量的加减运算则是计算机在\"遣词造句\"**。  \n",
     "2.词向量具有良好的语义特性，是表示词语特征的常用方式。**词向量的每一维的值代表一个具有一定的语义和语法上解释的特征**。故可以将词向量的每一维称为一个词语特征。词向量用Distributed Representation表示，一种低维实数向量。  \n",
     "**Distributed Representation低维实数向量，如：[0.792, −0.177, −0.107, 0.109, −0.542, …]。它让相似或相关的词在距离上更加接近。**  \n",
@@ -24,8 +25,34 @@
     "9.word2vec参数说明如下图所示:\n",
     "![word2vec参数说明](word2vec参数说明.png)\n",
     "\n",
-    "### References\n",
-    "1.[word2vec词向量训练及中文文本相似度计算](http://blog.csdn.net/eastmount/article/details/50637476)"
+    "## [word2vec: https://code.google.com/archive/p/word2vec/](https://code.google.com/archive/p/word2vec/)\n",
+    "\n",
+    "1.The word2vec tool takes a text corpus as input and produces the word vectors as output. It first constructs a vocabulary from the training text data and then learns vector representation of words.  \n",
+    "2.There are two main learning algorithms in word2vec : **continuous bag-of-words** and **continuous skip-gram**.  \n",
+    "3.**It was recently shown that the word vectors capture many _linguistic regularities_, for example vector operations vector('Paris') - vector('France') + vector('Italy') results in a vector that is very close to vector('Rome'), and vector('king') - vector('man') + vector('woman') is close to vector('queen')**.  \n",
+    "To observe strong regularities in the word vector space, **it is needed to train the models on large data set, with sufficient vector dimensionality as shown in [1].**  \n",
+    "4.**The linearity of the vector operations seems to weakly hold also for the addition of several vectors, so it is possible to add several word or phrase vectors to form representation of short sentences.**[2]  \n",
+    "5.**How to measure quality of the word vectors**  \n",
+    "Several factors influence the quality of the word vectors:\n",
+    "* amount and quality of the training data\n",
+    "* size of the vectors\n",
+    "* training algorithm\n",
+    "\n",
+    "The quality of the vectors is crucial for any application. However, exploration of different hyper-parameter settings for complex tasks might be **too time demanding**. Thus, **we designed simple test sets that can be used to quickly evaluate the word vector quality**.  \n",
+    "For the word relation test set described in [1], see `./demo-word-accuracy.sh`, for the phrase relation test set described in [2], see `./demo-phrase-accuracy.sh`. Note that the accuracy depends heavily on the amount of the training data; our best results for both test sets are above 70% accuracy with coverage close to 100%.  \n",
+    "6.**Performance**  \n",
+    "The training speed can be significantly improved by using parallel training on multiple-CPU machine (use the switch `-threads N`). The hyper-parameter choice is crucial for performance (both speed and accuracy), however varies for different applications. The main choices to make are:  \n",
+    "* **architecture**: skip-gram (slower, better for infrequent words) vs CBOW (fast)\n",
+    "* **the training algorithm**: hierarchical softmax (better for infrequent words) vs negative sampling (better for frequent words, better with low dimensional vectors)\n",
+    "* **sub-sampling of frequent words**: can improve both accuracy and speed for large data sets (useful values are in range 1e-3 to 1e-5)\n",
+    "* **dimensionality of the word vectors**: usually more is better, but not always\n",
+    "* **context (window) size**: for skip-gram usually around 10, for CBOW around 5\n",
+    "\n",
+    "7.**duplicate sentences should be removed before training the models**\n",
+    "\n",
+    "####  References\n",
+    "[1] Tomas Mikolov, Kai Chen, Greg Corrado, and Jeffrey Dean. [Efficient Estimation of Word Representations in Vector Space](https://arxiv.org/pdf/1301.3781.pdf). In Proceedings of Workshop at ICLR, 2013.\n",
+    "[2] Tomas Mikolov, Ilya Sutskever, Kai Chen, Greg Corrado, and Jeffrey Dean. [Distributed Representations of Words and Phrases and their Compositionality](https://arxiv.org/pdf/1310.4546.pdf). In Proceedings of NIPS, 2013."
    ]
   }
  ],
@@ -38,7 +65,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -49,5 +76,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
